src/app/features/reports-v2/create-report/create-report.component.css
:host ::ng-deep .p-dropdown {
  width: 100%;
  height: 40px;
  font-size: 1rem;
}
/*primeng style*/
.p-dropdown .p-dropdown-label.p-placeholder,
.p-dropdown.p-dropdown-clearable .p-dropdown-label {
  font-size: 0.5em;
}

:host ::ng-deep .p-dropdown span{
  font-size: 0.9rem;
}

::ng-deep .p-datatable .p-datatable-tbody > tr > td,
::ng-deep .p-datatable .p-datatable-thead > tr > th {
  padding: 0.5em;
  font-size: 0.9em;
  color: var(--primary-color)!important;
}

.sub-category:hover,
.sub-category:active
{
  background-color: #00539b03;
}
.metricSublist {
  cursor: pointer;
  transform: translateX(15px);
  font-size: 13px;
}

.metricSublist:hover {
  font-weight: 900;
  background-color: #00539b06;
}

:host ::ng-deep .pill-box {
  border: solid 1px #eee;
  margin-top: 20px;
  min-width: 200px;
  font-size: 0.9rem;
}


.query::selection {
  background-color: white;
  color: black;
  cursor: pointer;
}

.subject-area .content {
  border: solid 1px #eee;
  border-radius: 5px;
}

.subject-area ul {
  line-height: 25px;
  padding: 5px;
  /*margin-left: -120px!important;*/
  border: solid 1px #eee;
  border-radius: 5px;
  font-size: 0.9rem;
  width: max-content;
}

.subject-area ul li {
  border: solid 1px #eee;
  border-radius: 5px;
  padding: 5px;
  margin-bottom: 2px;
  cursor: pointer;
}

.subject-area ul li:hover {
  background: #eee;
}
.continueBtn {
  border-radius: 4px;
}

#reportName input[type=text] {
  border: none;
  border-bottom: #00529b 1px solid;
  color: #00529b;
}

.ai-bot {
  font-weight: 500;
  font-size: 0.9rem;
  cursor: pointer;
}

.ai-bot:hover {
font-size: 1rem;
transition: font-size 500ms;
}

.ai-bot .robot, .robot {
padding: 8px;
font-size: 1rem;
border-radius: 100%;
background: #e5efef;
}

.ai-bot span {
font-size: 0.6rem;
}

